--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -20,34 +20,33 @@ body {
     align-items: center;
     height: 100px;
     box-shadow: 0px 2px 4px rgba(72, 9, 232, 0.2);
-}
 
-.encabezado h1 {
-    text-transform: uppercase;
-    font-weight: 800;
-    text-shadow: 1px 1px 2px rgba(239, 7, 7, 0.5);
-    font-size: 2.5rem;
+    h1 {
+        text-transform: uppercase;
+        font-weight: 800;
+        text-shadow: 1px 1px 2px rgba(239, 7, 7, 0.5);
+        font-size: 2.5rem;
+    }
 }
 
 .Fuego {
     color: #d22b2b;
 }
 
-
 .encabezado li {
-    list-style-type: none;     
+    list-style-type: none;
     display: inline-block;
-}
 
-.encabezado li a {
-    text-decoration: none;
-    margin: 10px;
-    color: rgba(7, 0, 0, 0.878);
-    font-size: 1.5rem;
-}
+    a {
+        text-decoration: none;
+        margin: 10px;
+        color: rgba(7, 0, 0, 0.878);
+        font-size: 1.5rem;
 
-.encabezado li a:hover {
-    color: #3b0fec;
+        &:hover {
+            color: #3b0fec;
+        }
+    }
 }
 
 /* Banner */
@@ -59,58 +58,89 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-
-}
-
-.banner::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(6, 3, 3, 0.2);
-    z-index: 0;
-}
-
-
-
-
-.productos {
+  
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(6, 3, 3, 0.2);
+      z-index: 0;
+    }
+  }
+  
+  .productos {
     text-align: center;
     margin: 10vh;
     border-bottom: 1px solid black;
+  
+    h3 {
+      color: #ec2618;
+      text-transform: uppercase;
+      font-size: 5rem;
+      text-decoration-line: underline;
+    }
+  
+    p {
+      font-size: 2rem;
+      color: #212121;
+      padding: 7px;
+    }
+
+    /* Header */
+
+.encabezado {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 100px;
+    box-shadow: 0px 2px 4px rgba(72, 9, 232, 0.2);
+
+    h1 {
+        text-transform: uppercase;
+        font-weight: 800;
+        text-shadow: 1px 1px 2px rgba(239, 7, 7, 0.5);
+        font-size: 2.5rem;
+    }
 }
 
-
-.productos h3 {
-    color: #ec2618;
-    text-transform: uppercase;
-    font-size: 5rem;
-    text-decoration-line: underline;
+.Fuego {
+    color: #d22b2b;
 }
 
-.productos p {
-    font-size: 2rem;
-    color: #212121;
-    padding: 7px;
-}
+.encabezado li {
+    list-style-type: none;
+    display: inline-block;
 
-.contenedorproductos {
+    a {
+        text-decoration: none;
+        margin: 10px;
+        color: rgba(7, 0, 0, 0.878);
+        font-size: 1.5rem;
+
+        &:hover {
+            color: #3b0fec;
+        }
+    }
+}
+  }
+  
+  .contenedorproductos {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
-}
-
-.productos {
+  }
+  
+  .productos {
     border: 6px solid #810303;
     border-radius: 8px;
     padding: 15px;
     text-align: center;
-}
-
-
-.tarjeta {
+  }
+  
+  .tarjeta {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -119,82 +149,80 @@ body {
     border: 1px solid #ccc;
     padding: 20px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-    margin: 10px; 
-}
-
-.tarjeta img {
-    max-width: 100%;
-
-}
-
-.tarjeta p {
-    margin: 10px 0;
-}
-
-.tarjeta button {
-    background-color: #dc5212;
-    color: #0a0a0a;
-    border: none;
-    padding: 10px 20px;
-    font-size: 1rem;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-.tarjeta button:hover {
-    background-color: #fc0b0b;
-}
-
-
-
-.contenedorNosotros {
+    margin: 10px;
+  
+    img {
+      max-width: 100%;
+    }
+  
+    p {
+      margin: 10px 0;
+    }
+  
+    button {
+      background-color: #dc5212;
+      color: #0a0a0a;
+      border: none;
+      padding: 10px 20px;
+      font-size: 1rem;
+      cursor: pointer;
+      margin-top: 10px;
+  
+      &:hover {
+        background-color: #fc0b0b;
+      }
+    }
+  }
+  
+  .contenedorNosotros {
     display: flex;
     margin: 10vh;
 }
 
-
 /* Footer */
+
 .footer {
     background-color: #212121;
     color: #fff;
     padding: 20px 0;
-}
-
-.footerContenido {
+  }
+  
+  .footerContenido {
     display: flex;
     justify-content: space-between;
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
-}
-
-.footer h4 {
+  }
+  
+  .footer h4 {
     font-size: 1.5rem;
     margin-bottom: 10px;
-}
-
-.infoContacto p,
-.redesSociales a {
+  }
+  
+  .infoContacto p {
     margin: 5px 0;
     font-size: 1.2rem;
-}
-
-.redesSociales a {
+  }
+  
+  .redesSociales a {
+    margin: 5px 0;
+    font-size: 1.2rem;
     color: #7AB730;
     text-decoration: none;
     margin-right: 10px;
     font-size: 1.5rem;
-}
-
-.redesSociales a:hover {
-    color: #28a745;
-}
-
-
-.footer i {
+  
+    &:hover {
+      color: #28a745;
+    }
+  }
+  
+  .footer i {
     margin-right: 10px;
-}
+  }
 
+  
 
 
 @media (max-width:1023px) {
@@ -248,25 +276,18 @@ body {
     }
 }
 
-iframe {
-    display: block;
-    margin: auto;
-}
-
-
 form {
     margin-top: 20px;
-}
-
-label {
+  }
+  
+  label {
     display: block;
     font-weight: bold;
     margin-bottom: 5px;
     color: #0c03b9;
-
-}
-
-input, textarea {
+  }
+  
+  input, textarea {
     display: block;
     width: 100%;
     padding: 10px;
@@ -274,9 +295,23 @@ input, textarea {
     border-radius: 30px;
     margin-bottom: 10px;
     font-size: 13px;
-}
+  }
+  
+  .btnFormulario {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #140d0ddb;
+    color: #fff;
+    font-weight: bold;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  
 
-.btnFormulario {
+  .btnFormulario {
     display: block;
     width: 100%;
     padding: 10px;
@@ -288,3 +323,14 @@ input, textarea {
     font-size: 16px;
     cursor: pointer;
 }
+
+  
+  
+
+iframe {
+    display: block;
+    margin: auto;
+}
+
+
+/*# sourceMappingURL=estilo.css.map */
